feat: add appointments openapi, tests for booking. Fixed some bugs and added some missing features (appointments filter)
